<resources>
    <string name="app_name">Appetizer</string>
    <string name="btnLogin">LOG IN</string>
    <string name="btnSignup">SIGN UP</string>
    <string name="imgAppetizer">Appetizer</string>
    <string name="title_activity_login">Log in</string>
    <!-- Strings related to signup -->
    <string name="txtName">Name</string>
    <string name="txtAddress">Address</string>
    <string name="txtZip">ZIP Code</string>
    <string name="txtPhone">Phone Number</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_central">CentralActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
